Fix more layout issues (it never ends).
There was still too much padding on the home page, and the breadcrumb needed to be made smaller. Will adjust breadcrumb more another time - I'm tired :')

--- a/main.css
+++ b/main.css
@@ -183,17 +183,25 @@ main {
         margin: 0 0 30px 0;
     }
 
+        .breadcrumb > h1 {
+            font-size: 1.2em;
+        }
+
     #nav-links-list {
         margin: unset;
         padding: unset;
     }
 
-    #main .grid-container {
-        margin: 4em;
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 30px 30px;
-        justify-items: center;
-        text-align: center;
+    #main {
+        padding: unset;
     }
+    
+        #main .grid-container {
+            margin: 2em;
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 30px 30px;
+            justify-items: center;
+            text-align: center;
+        }
 }
